Apply docs theme

--- a/assets/css/utilities.css
+++ b/assets/css/utilities.css
@@ -3,6 +3,15 @@
   .transition {
     transition: all 0.2s ease;
   }
+  .transition-fast {
+    transition: all 0.1s ease;
+  }
+  .transition-slow {
+    transition: all 0.4s ease;
+  }
+  .transition-none {
+    transition: none;
+  }
 
   /* Scale */
   .scale {
@@ -16,14 +25,26 @@
   }
 
   /* Translate */
-  .translate-none {
+  .translate-0 {
     transform: translate(0%);
   }
-  .translate-l-full {
+  .-translate-x-full {
     transform: translateX(-100%);
   }
-  .translate-r-full {
+  .translate-x-full {
     transform: translateX(100%);
+  }
+  .-translate-x-50 {
+    transform: translateX(-50%);
+  }
+  .translate-x-50 {
+    transform: translateX(50%);
+  }
+  .translate--y-25-x-25 {
+    transform: translateX(25%) translateY(-25%);
+  }
+  .translate--y-30-x-30 {
+    transform: translateX(30%) translateY(-30%);
   }
 
   /* Text shadow */
