--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -3,6 +3,8 @@
 @import "./preflight.css";
 
 @import "./fonts.css";
+@import "./long-form.css";
+@import "./docs-nav.css";
 /* purgecss end ignore */
 
 @import "tailwindcss/components";
