build landing page

--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -1,3 +1,5 @@
-@import 'typeface-fira-sans';
+@import "typeface-fira-sans";
 
-@import 'typeface-fira-mono';
+@import "typeface-fira-mono";
+
+@import "typeface-caveat";
