--- a/assets/css/long-form.css
+++ b/assets/css/long-form.css
@@ -244,7 +244,11 @@
       }
 
       [role="gridcell"] {
-        @apply py-4 leading-2;
+        @apply py-4 leading-2 border-l border-b-1 border-gray-300;
+      }
+
+      [role="gridcell"]:last-child {
+        @apply border-r;
       }
 
       tr {
