add syntax highlighting theme

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -5,6 +5,7 @@
 @import "./fonts.css";
 @import "./long-form.css";
 @import "./docs-nav.css";
+@import "./code.css";
 /* purgecss end ignore */
 
 @import "tailwindcss/components";
