--- a/assets/css/long-form.css
+++ b/assets/css/long-form.css
@@ -186,7 +186,7 @@
   }
 
   .nifty-codeblock {
-    @apply rounded p-3 overflow-x-scroll bg-gray-100 -shadow max-h-2/3-screen scrolling-touch;
+    @apply rounded p-3 overflow-x-scroll -shadow max-h-2/3-screen scrolling-touch;
 
     code {
       @apply leading-1 bg-inherit;
@@ -199,7 +199,7 @@
   }
 
   :not(pre) > code {
-    @apply bg-gray-100;
+    @apply bg-gray-200;
   }
 
   :not(h1):not(h2):not(h3):not(h4):not(h5):not(h5) > code {
