--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -81,7 +81,7 @@
 
 @media screen and (min-width: theme('screens.md')) {
   .btn {
-    @apply rounded;
+    @apply rounded-1;
   }
 
   .btn-lg {
@@ -105,7 +105,7 @@
   }
 
   textarea.inp {
-    @apply rounded;
+    @apply rounded-1;
   }
 
   .inp-bordered {
@@ -118,8 +118,9 @@
 }
 
 @media screen and (min-width: theme('screens.md')) {
-  .inp {
-    @apply rounded;
+  .inp,
+  .inp:not(textarea) {
+    @apply rounded-1;
   }
 }
 
