--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -3,7 +3,7 @@
 @import "./preflight.css";
 
 @import "./fonts.css";
-@import "./long-form.css";
+@import "./prose.css";
 @import "./docs-nav.css";
 @import "./code.css";
 /* purgecss end ignore */
