--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -3,9 +3,8 @@
 @import "./preflight.css";
 
 @import "./fonts.css";
-@import "./prose.css";
+@import "./prose/index.css";
 @import "./docs-nav.css";
-@import "./code.css";
 /* purgecss end ignore */
 
 @import "tailwindcss/components";
