--- a/assets/css/prose/article.css
+++ b/assets/css/prose/article.css
@@ -1,220 +1,101 @@
 /* Markdown prose styles */
-.with-max-h {
-  @apply max-h-2/3-screen;
-}
-
 .baleada-prose-article {
   @apply text-black transition px-7 pb-12 pt-11;
 
-  :not(table):not([role="grid"]):not(div):not(main):not(section):not(article),
-  .baleada-prose-aside,
-  .baleada-prose-blockquote,
-  .baleada-prose-heading,
-  *.with-max-w,
-  hr,
-  img {
-    @apply max-w-5;
-  }
+  /* Horizontal margin and max width */
+  & > .contents {
+    & > address,
+    & > aside,
+    & > blockquote,
+    & > details,
+    & > div,
+    & > dl,
+    & > h1,
+    & > h2,
+    & > h3,
+    & > h4,
+    & > h5,
+    & > h6,
+    & > hr,
+    & > ol,
+    & > p,
+    & > section,
+    & > ul,
+    & > .baleada-prose-aside,
+    & > .baleada-prose-blockquote,
+    & > .baleada-prose-details,
+    & > .baleada-prose-heading,
+    & > .baleada-prose-list,
+    & > .baleada-prose-section {
+      @apply mx-auto with-max-w;
+    }
 
-  & > .contents > address,
-  & > .contents > article,
-  & > .contents > aside,
-  & > .contents > blockquote,
-  & > .contents > details,
-  & > .contents > dialog,
-  & > .contents > dd,
-  & > .contents > div,
-  & > .contents > dl,
-  & > .contents > dt,
-  & > .contents > fieldset,
-  & > .contents > figcaption,
-  & > .contents > figure,
-  & > .contents > footer,
-  & > .contents > form,
-  & > .contents > h1,
-  & > .contents > h2,
-  & > .contents > h3,
-  & > .contents > h4,
-  & > .contents > h5,
-  & > .contents > h6,
-  & > .contents > header,
-  & > .contents > hgroup,
-  & > .contents > hr,
-  & > .contents > li,
-  & > .contents > main,
-  & > .contents > nav,
-  & > .contents > ol,
-  & > .contents > p,
-  & > .contents > pre,
-  & > .contents > section,
-  & > .contents > table,
-  & > .contents > ul,
-  & > .contents > .baleada-prose-heading,
-  & > .contents > .baleada-prose-grid,
-  & > .contents > .baleada-prose-table,
-  & > .contents > .baleada-prose-codeblock,
-  & > .contents > .baleada-prose-blockquote,
-  & > .contents > .baleada-prose-aside {
-    @apply mx-auto;
+    & > figure,
+    & > pre,
+    & > table,
+    & > svg,
+    & > .baleada-prose-codeblock,
+    & > .baleada-prose-grid,
+    & > .baleada-prose-media {
+      @apply mx-auto;
+    }
   }
 
 
-  *:not(h1) + h2 {
-    @apply mt-10;
+  /* Margin top */
+  *:not(h1):not(h2):not(h3):not(h4):not(h5):not(h6) {
+    & + h2 {
+      @apply mt-10;
+    }
+
+    & + h3,
+    & + h4 {
+      @apply mt-9;
+    }
+
+    & + h5,
+    & + h6 {
+      @apply mt-8;
+    }
   }
 
-  *:not(h2) + h3,
-  *:not(h3) + h4 {
+  * + blockquote,
+  * + .baleada-prose-blockquote {
     @apply mt-9;
   }
 
-  *:not(h4) + h5,
-  *:not(h5) + h6 {
-    @apply mt-8;
-  }
-
-  * + blockquote {
-    @apply mt-9;
-  }
-
+  * + address,
+  * + aside,
+  * + blockquote,
+  * + details,
+  * + dl,
+  * + hr,
+  * + ol,
   * + p,
   * + ul,
-  * + ol,
-  * + img,
   * + .baleada-prose-aside,
-  * + .baleada-prose-codeblock,
-  * + .with-mt {
+  * + .baleada-prose-details,
+  * + .baleada-prose-list,
+  * + .baleada-prose-section {
     @apply mt-5;
   }
 
-  * + .baleada-prose-table {
+  * + figure,
+  * + pre,
+  * + table,
+  * + .baleada-prose-codeblock,
+  * + .baleada-prose-grid,
+  * + .baleada-prose-media {
     @apply mt-7;
   }
 
-  h1::after,
-  hr {
-    content: '';
-    @apply block rounded-full h-2px bg-primary-700;
-  }
-
-  hr {
-    @apply w-1/3 min-w-4 my-16;
-  }
-
-  h1::after {
-    @apply w-12 mt-6;
-  }
-
-  h1 {
-    @apply text-7 font-700 leading-0 text-gray-800;
-  }
-
-  h2 {
-    @apply text-5 mb-6 font-500 text-gray-900;
-
-    code {
-      @apply text-4;
-    }
-  }
-
-  h3 {
-    @apply text-4 mb-5 font-300 text-gray-900;
-
-    code {
-      @apply text-3;
-    }
-  }
-
-  h4 {
-    @apply text-3 mb-5 font-600 tracking-1 text-gray-900;
-
-    code {
-      @apply text-2;
-    }
-  }
-
-  h5 {
-    @apply text-2 mb-3 font-600 tracking-1 text-gray-900;
-
-    code {
-      @apply text-1;
-    }
-  }
-
-  .baleada-prose-heading:hover {
-    @apply text-primary-700;
-  }
-
+  /* Non-prose elements */
   p {
     @apply text-3 leading-2;
   }
 
   em {
     @apply italic;
-  }
-
-  blockquote::before {
-    content: '\201C';
-    @apply absolute text-9 font-300 text-primary-900 opacity-70 top-0 left-0 -mt-1/2em;
-  }
-
-  blockquote {
-    @apply relative pl-6 pr-4 py-3 rounded mb-8 text-6 bg-primary-100 shadow-1 text-primary-900;
-  }
-
-  ul,
-  ol {
-    li {
-      @apply relative pl-8 leading-2;
-
-      p {
-        @apply mt-3;
-      }
-    }
-
-    * + li {
-      @apply mt-2;
-    }
-
-    li::before {
-      @apply absolute left-0 ml-2 text-3 text-primary-900;
-    }
-  }
-
-  * + ul,
-  * + ol {
-    ul,
-    ol {
-      @apply mt-3
-    }
-  }
-
-  ul {
-    > li::before {
-      content: '\2022';
-      @apply text-5 -mt-1;
-    }
-
-    li {
-      > ul > li::before {
-        content: '\25E6';
-        @apply text-3;
-      }
-    }
-  }
-
-  ol {
-    > li::before {
-      content: counter(item)'.';
-    }
-
-    li {
-      counter-increment: item;
-
-      > ol > li::before {
-        content: counter(item, lower-roman)'.';
-      }
-    }
   }
 
   img {
@@ -547,46 +428,6 @@
 .dark {
   .prose {
     @apply text-gray-200;
-
-    h1::after,
-    hr {
-      @apply bg-primary-gray-600;
-    }
-
-    h1 {
-      @apply text-gray-400;
-    }
-
-    h2 {
-      @apply text-gray-400;
-    }
-
-    h3 {
-      @apply text-gray-400;
-    }
-
-    h4 {
-      @apply text-gray-400;
-    }
-
-    h5 {
-      @apply text-gray-400;
-    }
-
-    .baleada-prose-heading:hover {
-      @apply text-primary-gray-500;
-    }
-
-    blockquote {
-      @apply bg-primary-gray-900 text-primary-gray-300;
-    }
-
-    ul,
-    ol {
-      li::before {
-        @apply text-primary-gray-500;
-      }
-    }
 
     a {
       @apply text-primary-200;
