--- a/assets/css/prose/heading.css
+++ b/assets/css/prose/heading.css
@@ -1,11 +1,98 @@
-.prose {
-  .prose-heading {
-
+.baleada-prose-article .contents {
+  & > h1::after,
+  & > hr {
+    content: '';
+    @apply block rounded-full h-2px bg-primary-700;
   }
 
-  &.dark {
-    .prose-heading {
+  & > hr {
+    @apply w-1/3 min-w-4 my-16;
+  }
 
+  & > h1::after {
+    @apply w-12 mt-6;
+  }
+
+  & > h1 {
+    @apply text-7 font-700 leading-0 text-gray-800;
+  }
+
+  & > h2 {
+    @apply text-5 mb-6 font-500 text-gray-900;
+
+    code {
+      @apply text-4;
+    }
+  }
+
+  & > h3 {
+    @apply text-4 mb-5 font-300 text-gray-900;
+
+    code {
+      @apply text-3;
+    }
+  }
+
+  & > h4 {
+    @apply text-3 mb-5 font-600 tracking-1 text-gray-900;
+
+    code {
+      @apply text-2;
+    }
+  }
+
+  & > h5 {
+    @apply text-2 mb-3 font-600 tracking-1 text-gray-900;
+
+    code {
+      @apply text-1;
+    }
+  }
+
+  .baleada-prose-heading {
+    button {
+      svg {
+        @apply icon;
+      }
+    }
+
+    a {
+      @apply text-inherit no-underline;
+    }
+
+    &:hover {
+      @apply text-primary-700;
+    }
+  }
+
+  .dark & {
+    h1::after,
+    hr {
+      @apply bg-primary-gray-600;
+    }
+
+    h1 {
+      @apply text-gray-400;
+    }
+
+    h2 {
+      @apply text-gray-400;
+    }
+
+    h3 {
+      @apply text-gray-400;
+    }
+
+    h4 {
+      @apply text-gray-400;
+    }
+
+    h5 {
+      @apply text-gray-400;
+    }
+
+    .baleada-prose-heading:hover {
+      @apply text-primary-gray-500;
     }
   }
 }
